--- a/.github/workflows/frontend-ci.yml
+++ b/.github/workflows/frontend-ci.yml
@@ -22,6 +22,11 @@ jobs:
         working-directory: frontend
         run: npm ci
 
+      - name: Check formatting (fail on warnings)
+        working-directory: frontend
+        run: npm run prettier:ci'
+
+
       - name: Lint (fail on warnings)
         working-directory: frontend
         run: npm run lint:ci
