--- a/backend/appsettings.json
+++ b/backend/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Host=localhost;Port=5432;Database=BarDb;Username=postgres;Password=yourpassword"
+    "DefaultConnection": "Port=5432;Database=postgres;SSL Mode=Require;Trust Server Certificate=true"
   }
 }
