--- a/backend/appsettings.json
+++ b/backend/appsettings.json
@@ -7,6 +7,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Port=5432;Database=postgres;SSL Mode=Require;Trust Server Certificate=true"
+    "IPv4Connection": "Host=aws-1-eu-north-1.pooler.supabase.com;Port=6543;Database=postgres;SSL Mode=Require;Trust Server Certificate=true",
+    "DefaultConnection": "Host=db.<ORG_ID>.supabase.co;Port=5432;Database=postgres;SSL Mode=Require;Trust Server Certificate=true"
   }
 }
