--- a/backend/appsettings.json
+++ b/backend/appsettings.json
@@ -7,7 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "IPv4Connection": "Host=aws-1-eu-north-1.pooler.supabase.com;Port=6543;Database=postgres;SSL Mode=Require;Trust Server Certificate=true",
-    "DefaultConnection": "Host=db.<ORG_ID>.supabase.co;Port=5432;Database=postgres;SSL Mode=Require;Trust Server Certificate=true"
+    "DefaultConnection": "Host=localhost;Port=5432;Database=BarDb;Username=saba;Password=saba;"
   }
 }
