--- a/backend/appsettings.json
+++ b/backend/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Host=localhost;Port=5432;Database=BarDb;Username=saba;Password=saba;"
+    "DefaultConnection": "Host=localhost;Port=5432;Database=barauthdb;Username=postgres;Password=postgres;"
   }
 }
