--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,8 @@
     "format": "prettier --write 'src/**/*.{js,jsx,json,css,md}'"
   },
   "dependencies": {
+    "@microsoft/signalr": "^9.0.6",
+    "axios": "^1.12.2",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-router-dom": "^7.9.3"
