--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.1",
+    "@microsoft/signalr": "^9.0.6",
     "@mui/material": "^7.3.4",
     "axios": "^1.12.2",
     "react": "^19.2.0",
