--- a/backend/backend.csproj
+++ b/backend/backend.csproj
@@ -9,6 +9,9 @@
   </PropertyGroup>
 
   <ItemGroup>
+  <PackageReference Include="Microsoft.AspNetCore.Mvc.Testing" Version="8.0.5">
+    <PrivateAssets>all</PrivateAssets>
+</PackageReference>
     <PackageReference Include="AutoMapper" Version="12.0.1" />
     <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="12.0.1" />
     <PackageReference Include="DotNetEnv" Version="3.1.1" />
