--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -14,6 +14,8 @@ WORKDIR /app
 EXPOSE 8080
 EXPOSE 8081
 
+ENV ASPNETCORE_URLS=http://*:8080
+
 COPY --from=build /app/publish .
 
 ENTRYPOINT ["dotnet", "backend.dll"]
